PMA-15 feat: implement redirects

--- a/src/locales/en/main.json
+++ b/src/locales/en/main.json
@@ -1,5 +1,6 @@
 {
   "title": "Project Management App",
   "sign_in": "Sign in",
-  "sign_up": "Sign up"
+  "sign_up": "Sign up",
+  "log_out": "Log out"
 }
