--- a/src/locales/en/main.json
+++ b/src/locales/en/main.json
@@ -7,5 +7,5 @@
   "sign_in_account": "Sign up for an account",
   "go_to_main": "Go to Main page",
   "not_found": "page not found",
-  "create": "Create"
+  "create": "Create new board"
 }
