PMA-29 feat: implement language select

--- a/src/locales/en/main.json
+++ b/src/locales/en/main.json
@@ -5,7 +5,7 @@
   "sign_up_account": "Already have an account? Sign in",
   "sign_in_account": "Sign up for an account",
   "go_to_boards": "Go to your boards",
-  "not_found": "page not found",
+  "not_found": "Page not found",
   "create_new_board": "Create new board",
   "cancel": "Cancel"
 }
