--- a/src/locales/ru/main.json
+++ b/src/locales/ru/main.json
@@ -1,3 +1,11 @@
 {
-  "title": "Приложение для управления проектами"
+  "sign_in": "Войти",
+  "sign_up": "Регистироваться",
+  "log_out": "Выйти",
+  "sign_up_account": "Уже есть аккаунт? Войти",
+  "sign_in_account": "Зарегистрировать аккаунт",
+  "go_to_boards": "Перейти к доскам",
+  "not_found": "Страница не найдена",
+  "create_new_board": "Создать доску",
+  "cancel": "Отменить"
 }
