--- a/src/locales/ru/main.json
+++ b/src/locales/ru/main.json
@@ -7,5 +7,6 @@
   "go_to_boards": "Перейти к доскам",
   "not_found": "Страница не найдена",
   "create_new_board": "Создать доску",
-  "cancel": "Отменить"
+  "cancel": "Отменить",
+  "submit": "Отправить"
 }
