PMA-30 feat: implement update board logic

--- a/src/locales/en/main.json
+++ b/src/locales/en/main.json
@@ -7,6 +7,7 @@
   "go_to_boards": "Go to your boards",
   "not_found": "Page not found",
   "create_new_board": "Create new board",
+  "edit_board": "Edit board",
   "cancel": "Cancel",
   "submit": "Submit"
 }
