--- a/src/locales/ru/main.json
+++ b/src/locales/ru/main.json
@@ -7,6 +7,7 @@
   "go_to_boards": "Перейти к доскам",
   "not_found": "Страница не найдена",
   "create_new_board": "Создать доску",
+  "edit_board": "Редактировать доску",
   "cancel": "Отменить",
   "submit": "Отправить"
 }
