--- a/src/locales/en/main.json
+++ b/src/locales/en/main.json
@@ -9,5 +9,8 @@
   "create_new_board": "Create new board",
   "edit_board": "Edit board",
   "cancel": "Cancel",
-  "submit": "Submit"
+  "submit": "Submit",
+  "confirmation_modal": "Confirmation Modal",
+  "confirmation_message": "Are you sure you want to DELETE?",
+  "title": "Title"
 }
