PMA-31 style: add styles on 404 page

--- a/src/locales/en/main.json
+++ b/src/locales/en/main.json
@@ -6,6 +6,7 @@
   "sign_in_account": "Sign up for an account",
   "go_to_boards": "Go to your boards",
   "not_found": "Page not found",
+  "go_to_main": "Go to Main",
   "create_new_board": "Create new board",
   "edit_board": "Edit board",
   "cancel": "Cancel",
