--- a/src/locales/ru/main.json
+++ b/src/locales/ru/main.json
@@ -6,6 +6,7 @@
   "sign_in_account": "Зарегистрировать аккаунт",
   "go_to_boards": "Перейти к доскам",
   "not_found": "Страница не найдена",
+  "go_to_main": "Вернуться на главную",
   "create_new_board": "Создать доску",
   "edit_board": "Редактировать доску",
   "cancel": "Отменить",
