--- a/src/locales/en/main.json
+++ b/src/locales/en/main.json
@@ -6,6 +6,12 @@
   "sign_in_account": "Sign up for an account",
   "go_to_boards": "Go to your boards",
   "not_found": "Page not found",
+  "go_to_main": "Go to Main",
   "create_new_board": "Create new board",
-  "cancel": "Cancel"
+  "edit_board": "Edit board",
+  "cancel": "Cancel",
+  "submit": "Submit",
+  "confirmation_modal": "Confirmation Modal",
+  "confirmation_message": "Are you sure you want to DELETE?",
+  "title": "Title"
 }
