--- a/src/locales/en/main.json
+++ b/src/locales/en/main.json
@@ -1,10 +1,17 @@
 {
-  "title": "Project Management App",
   "sign_in": "Sign in",
   "sign_up": "Sign up",
   "log_out": "Log out",
   "sign_up_account": "Already have an account? Sign in",
   "sign_in_account": "Sign up for an account",
-  "go_to_main": "Go to Main page",
-  "not_found": "page not found"
+  "go_to_boards": "Go to your boards",
+  "not_found": "Page not found",
+  "go_to_main": "Go to Main",
+  "create_new_board": "Create new board",
+  "edit_board": "Edit board",
+  "cancel": "Cancel",
+  "submit": "Submit",
+  "confirmation_modal": "Confirmation Modal",
+  "confirmation_message": "Are you sure you want to DELETE?",
+  "title": "Title"
 }
