--- a/src/locales/ru/main.json
+++ b/src/locales/ru/main.json
@@ -1,3 +1,17 @@
 {
-  "title": "Приложение для управления проектами"
+  "sign_in": "Войти",
+  "sign_up": "Регистироваться",
+  "log_out": "Выйти",
+  "sign_up_account": "Уже есть аккаунт? Войти",
+  "sign_in_account": "Зарегистрировать аккаунт",
+  "go_to_boards": "Перейти к доскам",
+  "not_found": "Страница не найдена",
+  "go_to_main": "Вернуться на главную",
+  "create_new_board": "Создать доску",
+  "edit_board": "Редактировать доску",
+  "cancel": "Отменить",
+  "submit": "Отправить",
+  "confirmation_modal": "Подтверждение",
+  "confirmation_message": "Вы уверены, что хотите УДАЛИТЬ?",
+  "title": "Заголовок"
 }
