PMA-32 fix: adjust styles

--- a/src/locales/en/main.json
+++ b/src/locales/en/main.json
@@ -16,5 +16,6 @@
   "title": "Title",
   "add_column": "Add column",
   "create_new_column": "Create new column",
-  "create_new_task": "Create new task"
+  "create_new_task": "Create new task",
+  "description": "Description"
 }
