--- a/src/locales/ru/main.json
+++ b/src/locales/ru/main.json
@@ -16,5 +16,6 @@
   "title": "Заголовок",
   "add_column": "Добавить колонку",
   "create_new_column": "Создать колонку",
-  "create_new_task": "Создать задачу"
+  "create_new_task": "Создать задачу",
+  "description": "Описание"
 }
