PMA-32 fix: translations, fix component name

--- a/src/locales/ru/main.json
+++ b/src/locales/ru/main.json
@@ -17,5 +17,6 @@
   "add_column": "Добавить колонку",
   "create_new_column": "Создать колонку",
   "create_new_task": "Создать задачу",
+  "edit_task": "Редактировать задачу",
   "description": "Описание"
 }
