PMA-33 feat: implement update user

--- a/src/locales/en/main.json
+++ b/src/locales/en/main.json
@@ -17,5 +17,6 @@
   "add_column": "Add column",
   "create_new_column": "Create new column",
   "create_new_task": "Create new task",
-  "description": "Description"
+  "description": "Description",
+  "update_user_title": " You can change your profile, "
 }
