--- a/src/locales/ru/main.json
+++ b/src/locales/ru/main.json
@@ -17,5 +17,6 @@
   "add_column": "Добавить колонку",
   "create_new_column": "Создать колонку",
   "create_new_task": "Создать задачу",
-  "description": "Описание"
+  "description": "Описание",
+  "update_user_title": " Вы можете изменить свой профиль, "
 }
