PMA-41 fix: adjust styles

--- a/src/locales/ru/main.json
+++ b/src/locales/ru/main.json
@@ -4,7 +4,7 @@
   "log_out": "Выйти",
   "sign_up_account": "Уже есть аккаунт? Войти",
   "sign_in_account": "Зарегистрировать аккаунт",
-  "go_to_boards": "Перейти к доскам",
+  "go_to_boards": "Доски",
   "not_found": "Страница не найдена",
   "back_to_main": "Вернуться на главную",
   "create_new_board": "Создать доску",
