--- a/src/locales/en/main.json
+++ b/src/locales/en/main.json
@@ -4,7 +4,7 @@
   "log_out": "Log out",
   "sign_up_account": "Already have an account? Sign in",
   "sign_in_account": "Sign up for an account",
-  "go_to_boards": "Go to your boards",
+  "go_to_boards": "Boards",
   "not_found": "Page not found",
   "back_to_main": "Back to main page",
   "create_new_board": "Create new board",
