PMA-33 fix: fix incorrect behavior of update profile

--- a/src/locales/ru/main.json
+++ b/src/locales/ru/main.json
@@ -19,7 +19,7 @@
   "create_new_task": "Создать задачу",
   "description": "Описание",
   "update_user_title": " Вы можете изменить свой профиль, ",
-  "update": "Обновить аккаунт",
+  "update": "Редактировать профиль",
   "delete": "Удалить аккаунт",
   "name": "Имя",
   "login": "Логин",
