--- a/src/locales/ru/main.json
+++ b/src/locales/ru/main.json
@@ -18,5 +18,7 @@
   "create_new_column": "Создать колонку",
   "create_new_task": "Создать задачу",
   "edit_task": "Редактировать задачу",
-  "description": "Описание"
+  "description": "Описание",
+  "no_boards": "У вас еще нет досок.",
+  "please_create": "Пожалуйста, создайте первую ;)"
 }
