PMA-33-2 fix: change locales

--- a/src/locales/ru/main.json
+++ b/src/locales/ru/main.json
@@ -23,7 +23,7 @@
   "please_create": "Пожалуйста, создайте первую ;)",
   "update_user_title": " Вы можете изменить свой профиль, ",
   "update": "Редактировать профиль",
-  "delete": "Удалить аккаунт",
+  "delete": "Удалить профиль",
   "name": "Имя",
   "login": "Логин",
   "password": "Пароль"
