--- a/src/locales/ru/main.json
+++ b/src/locales/ru/main.json
@@ -26,5 +26,8 @@
   "delete": "Удалить профиль",
   "name": "Имя",
   "login": "Логин",
-  "password": "Пароль"
+  "password": "Пароль",
+  "about_app": "О приложении Liosta",
+  "about_team": "Наша команда",
+  "welcome_Description": "Liosta инструмент для управления проектами. Наша цель помочь достичь поставленных задач, как отдельному человеку в команде, так и группе разработчиков. Управляйте задачами легко и просто :)"
 }
