PMA-38 feat: implement user validation

--- a/src/locales/ru/main.json
+++ b/src/locales/ru/main.json
@@ -26,5 +26,9 @@
   "delete": "Удалить профиль",
   "name": "Имя",
   "login": "Логин",
-  "password": "Пароль"
+  "password": "Пароль",
+  "min_input_len": "Необходимо ввести не менее 3 символов",
+  "only_eng": "Можно использовать только латиницу",
+  "only_num_eng": "Можно использовать только цифры и латиницу",
+  "no_spaces": "Не должно быть пробелов"
 }
