--- a/src/locales/en/main.json
+++ b/src/locales/en/main.json
@@ -26,5 +26,9 @@
   "delete": "Delete profile ",
   "name": "Name",
   "login": "Login",
-  "password": "Password"
+  "password": "Password",
+  "min_input_len": "You must enter more than 3 characters",
+  "only_eng": "Only latin alphabet letters can be used",
+  "only_num_eng": "Only numbers and english letters can be used",
+  "no_spaces": "Cannot enter spaces"
 }
