fix: style, translation, title column

--- a/src/locales/en/main.json
+++ b/src/locales/en/main.json
@@ -27,7 +27,10 @@
   "name": "Name",
   "login": "Login",
   "password": "Password",
-  "about_app": "About Liosta",
-  "about_team": "About team",
-  "welcome_Description": "Liosta is a tool for project management. Our goal is to help achieve the set tasks, both for an individual in the team and for a group of developers. Manage tasks easy and simple :)"
+  "about_title": "About Liosta",
+  "our_team": "Our Team",
+  "name_one": "Daria",
+  "name_two": "Gleb",
+  "name_three": "Olga",
+  "welcome_description": "Liosta is a tool for project management. Our goal is to help achieve the set tasks, both for an individual in the team and for a group of developers. Manage tasks easy and simple :)"
 }
