--- a/src/locales/ru/main.json
+++ b/src/locales/ru/main.json
@@ -27,7 +27,10 @@
   "name": "Имя",
   "login": "Логин",
   "password": "Пароль",
-  "about_app": "О приложении Liosta",
-  "about_team": "Наша команда",
-  "welcome_Description": "Liosta инструмент для управления проектами. Наша цель помочь достичь поставленных задач, как отдельному человеку в команде, так и группе разработчиков. Управляйте задачами легко и просто :)"
+  "about_title": "О приложении Liosta",
+  "our_team": "Наша команда",
+  "name_one": "Дарья",
+  "name_two": "Глеб",
+  "name_three": "Ольга",
+  "welcome_description": "Liosta инструмент для управления проектами. Наша цель помочь достичь поставленных задач, как отдельному человеку в команде, так и группе разработчиков. Управляйте задачами легко и просто :)"
 }
