--- a/src/locales/ru/main.json
+++ b/src/locales/ru/main.json
@@ -27,7 +27,9 @@
   "name": "Имя",
   "login": "Логин",
   "password": "Пароль",
+  "required": "Пожалуйста, заполните поле",
   "min_input_len": "Необходимо ввести не менее 3 символов",
+  "textares_len": "Необходимо ввести не менее 3 и не более 100 символов",
   "only_eng": "Можно использовать только латиницу",
   "only_num_eng": "Можно использовать только цифры и латиницу",
   "no_spaces": "Не должно быть пробелов"
