--- a/src/locales/en/main.json
+++ b/src/locales/en/main.json
@@ -27,9 +27,9 @@
   "name": "Name",
   "login": "Login",
   "password": "Password",
-  "required": "Please fill in the field",
-  "min_input_len": "You must enter more than 3 characters",
-  "textares_len": "You must enter more than 3 and less then 100 characters",
+  "required": "This field is required",
+  "min_input_len": "Must be more than 3 characters",
+  "textares_len": "Must be more than 3 characters",
   "only_eng": "Only latin alphabet letters can be used",
   "only_num_eng": "Only numbers and english letters can be used",
   "no_spaces": "Cannot enter spaces",
