--- a/src/locales/en/main.json
+++ b/src/locales/en/main.json
@@ -38,5 +38,6 @@
   "name_one": "Daria",
   "name_two": "Gleb",
   "name_three": "Olga",
-  "welcome_description": "Liosta is a tool for project management. Our goal is to help achieve the set tasks, both for an individual in the team and for a group of developers. Manage tasks easy and simple :)"
+  "welcome_description": "Liosta is a tool for project management. Our goal is to help achieve the set tasks, both for an individual in the team and for a group of developers. Manage tasks easy and simple :)",
+  "assignee": "Assignee"
 }
