--- a/src/locales/ru/main.json
+++ b/src/locales/ru/main.json
@@ -38,5 +38,6 @@
   "name_one": "Дарья",
   "name_two": "Глеб",
   "name_three": "Ольга",
-  "welcome_description": "Liosta инструмент для управления проектами. Наша цель помочь достичь поставленных задач, как отдельному человеку в команде, так и группе разработчиков. Управляйте задачами легко и просто :)"
+  "welcome_description": "Liosta инструмент для управления проектами. Наша цель помочь достичь поставленных задач, как отдельному человеку в команде, так и группе разработчиков. Управляйте задачами легко и просто :)",
+  "assignee": "Исполнитель"
 }
