--- a/src/locales/ru/main.json
+++ b/src/locales/ru/main.json
@@ -29,6 +29,7 @@
   "password": "Пароль",
   "required": "Пожалуйста, заполните поле",
   "min_input_len": "Введите не менее 3 символов",
+  "max_length": "Введите не более 20 символов",
   "textares_len": "Введите не менее 3 символов",
   "only_eng": "Можно использовать только латиницу",
   "only_num_eng": "Можно использовать только латиницу и цифры",
