fix: assignee location

--- a/src/locales/en/main.json
+++ b/src/locales/en/main.json
@@ -41,5 +41,5 @@
   "name_three": "Olga",
   "name_team": "Team 57",
   "welcome_description": "Liosta is a tool for project management. Our goal is to help achieve the set tasks, both for an individual in the team and for a group of developers. Manage tasks easy and simple :)",
-  "assignee": "Assignee"
+  "assignee": "Assignee:"
 }
