--- a/src/locales/ru/main.json
+++ b/src/locales/ru/main.json
@@ -41,5 +41,5 @@
   "name_three": "Ольга",
   "name_team": "Команда 57",
   "welcome_description": "Liosta инструмент для управления проектами. Наша цель помочь достичь поставленных задач, как отдельному человеку в команде, так и группе разработчиков. Управляйте задачами легко и просто :)",
-  "assignee": "Исполнитель"
+  "assignee": "Исполнитель:"
 }
