PMA-61 refactor: refactoring header, fix naming and translations

--- a/src/locales/ru/main.json
+++ b/src/locales/ru/main.json
@@ -22,8 +22,8 @@
   "no_boards": "У вас еще нет досок.",
   "please_create": "Пожалуйста, создайте первую ;)",
   "update_user_title": " Вы можете изменить свой профиль, ",
-  "update": "Редактировать профиль",
-  "delete": "Удалить профиль",
+  "edit_profile": "Редактировать профиль",
+  "delete_profile": "Удалить профиль",
   "name": "Имя",
   "login": "Логин",
   "password": "Пароль",
