--- a/src/locales/en/main.json
+++ b/src/locales/en/main.json
@@ -22,8 +22,8 @@
   "no_boards": "You don't have Boards yet.",
   "please_create": "Please create first one ;)",
   "update_user_title": " You can change your profile, ",
-  "update": "Edit profile",
-  "delete": "Delete profile ",
+  "edit_profile": "Edit profile",
+  "delete_profile": "Delete profile ",
   "name": "Name",
   "login": "Login",
   "password": "Password",
