fix: remove unnessesary extra line, the same translation

--- a/src/locales/en/welcome.json
+++ b/src/locales/en/welcome.json
@@ -2,6 +2,7 @@
   "sign_in": "Sign in",
   "sign_up": "Sign up",
   "log_out": "Log out",
+  "go_to_main": "Go to main",
   "about_title": "About Liosta",
   "our_team": "Our Team",
   "name_one": "Darya",
