--- a/src/locales/ru/welcome.json
+++ b/src/locales/ru/welcome.json
@@ -2,6 +2,7 @@
   "sign_in": "Войти",
   "sign_up": "Регистироваться",
   "log_out": "Выйти",
+  "go_to_main": "На главную",
   "about_title": "О приложении Liosta",
   "our_team": "Наша команда",
   "name_one": "Дарья",
