fix: translate, space

--- a/src/locales/pl/board.json
+++ b/src/locales/pl/board.json
@@ -7,5 +7,5 @@
   "create_new_task": "Utwórz zadanie",
   "edit_task": "Edytuj zadanie",
   "cancel": "Cofnij",
-  "submit": "Zatwierdź"
+  "submit": "Zaakceptuj"
 }
