--- a/src/locales/pl/main.json
+++ b/src/locales/pl/main.json
@@ -6,6 +6,6 @@
   "create_new_board": "Utwórz tablicę",
   "edit_board": "Edytuj tablicę",
   "cancel": "Cofnij",
-  "submit": "Zatwierdź",
+  "submit": "Zaakceptuj",
   "name_team": "Zespół 57"
 }
