--- a/src/locales/pl/welcome.json
+++ b/src/locales/pl/welcome.json
@@ -9,5 +9,7 @@
   "name_two": "Gleb",
   "name_three": "Olga",
   "name_team": "Zespół 57",
+  "team_role_1": "Lider zespołu",
+  "team_role_2": "Deweloper",
   "welcome_description": "Liosta to narzędzie do zarządzania projektami. Naszym celem jest pomoc w realizacji postawionych zadań, zarówno indywidualnym celom, jak i grupie programistów. Zarządzaj zadaniami łatwo i prosto :)"
 }
