--- a/src/locales/ru/welcome.json
+++ b/src/locales/ru/welcome.json
@@ -9,5 +9,7 @@
   "name_two": "Глеб",
   "name_three": "Ольга",
   "name_team": "Команда 57",
+  "team_role_1": "Лидер команды",
+  "team_role_2": "Разработчик",
   "welcome_description": "Liosta инструмент для управления проектами. Наша цель помочь достичь поставленных задач, как отдельному человеку в команде, так и группе разработчиков. Управляйте задачами легко и просто :)"
 }
